<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NFC Chamadas</string>
    <string name="hello_world">Hello world!</string>
    <string name="screen_login_label_login">Login:</string>
    <string name="title_activity_logado">NFC Chamadas</string>
    <string name="title_activity_cadastrar_usuario">CadastrarUsuarioActivity</string>
    <string name="cadastrar_usuario_label_nome">Nome</string>
    <string name="cadastrar_usuario_label_cadastrar_usuario">Cadastrar Usuário</string>
    <string name="cadastrar_usuario_label_email">E-mail</string>
    <string name="cadastrar_usuario_label_registro_academico">Registro acadêmico</string>
    <string name="cadastrar_usuario_label_senha">Senha</string>
    <string name="cadastrar_usuario_label_confirma_senha">Confirma senha</string>
    <string name="cadastrar_usuario_label_tipo_pessoa">Tipo de pessoa</string>
    <string name="falha_na_conexao_com_servidor">Falha na conexão com o servidor!</string>
    <string name="falha_ao_cadastrar_usuario">Falha na conexão com o servidor para cadastrar usuario!</string>
    <string name="falha_ao_fazer_login">Falha na conexão com o servidor para fazer login!</string>
    <string name="cadastrar_usuario_validar_insira_nome">Insira um nome</string>
    <string name="cadastrar_usuario_validar_insira_email_valido">Insira um e-mail válido</string>
    <string name="cadastrar_usuario_validar_insira_registro_academico">Insira um número de registro acadêmico</string>
    <string name="cadastrar_usuario_validar_insira_senha">Insira uma senha</string>
    <string name="cadastrar_usuario_validar_confirma_senha_nao_coincide">Confirma senha não coincide com a senha</string>
    <string name="cadastrar_usuario_validar_selecione_tipo_pessoa">Selecione um tipo de pessoa</string>
    <string name="fazer_login_hint_racademico_ou_email">Reg. Acadêmico ou E-mail</string>
    <string name="fazer_login_hint_senha">Senha</string>
    <string name="fazer_login_text_button_login">Login</string>
    <string name="fazer_login_text_button_cadastrese">Cadastre-se</string>
    <string name="usuario_ou_senha_incorretos">Usuário ou senha incorretos!</string>
    <string name="falha_ao_fazer_login_2">Falha ao fazer login!</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nfc">NFC Chamadas</string>
    <string name="lbl_nfc">Chamada NFC</string>
    <string name="lbl_teste">teste</string>
    <string name="lbl_salvar">Confirmar</string>
    <string name="lbl_tagLida">Tag :</string>
    <string name="lbl_Lista_presentes">Lista de presentes</string>
    <string name="title_activity_inicializa">NFCChamadas</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_inicial">InicialActivity</string>
    <string name="lbl_sair">Logout</string>
    <string name="lbl_AlteraData">Alterar data</string>
    <string name="evento_list_item_hora_inicio_fim" formatted="false">Das %s às %s</string>
    <string name="evento_list_item_data" formatted="false">Dia %s</string>
   	<string name="eventos_list_carregando_os_eventos">Carregando os eventos...</string>
   	<string name="mostrar_eventos_de_hoje">Mostrar\neventos\nde hoje</string>
   	<string name="do_dia">Do dia</string>
   	<string name="ao_dia">Ao dia</string>
   		<string name="lbl_evento">Evento</string>
   	<string name="lbl_qtd_aula">"Quantidade Aula: "</string>
   	<string name="lbl_descricao">Descrição</string>
   	<string name="lbl_qtd_aulas">"Qtd. Aulas: "</string>
   	<string name="ERRO_SALVAR_PRESENCA">Erro ao salvar presença!</string>
 </resources>
