<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.utfpr.cp.projofic1.nfcchamadas.NFCActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_nfc" />

     <TextView
         android:id="@+id/txtQtd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
     />

      <TextView
          android:id="@+id/txtDescricao"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
      />

    <TextView
        android:id="@+id/txtEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_evento" />

   

    <TextView
        android:id="@+id/txt_id_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/lbl_tagLida" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvEventoListItemNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_Lista_presentes"
        android:textSize="@dimen/Lista" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="241dp"
        android:layout_weight="0.45"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/listPresentes"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_weight="0.64" >
        </ListView>

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_salvar" />
    </LinearLayout>

</LinearLayout>